
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int resp_size; } ;
typedef TYPE_1__ GLog ;
typedef int GJSON ;


 int OVERALL_BANDWIDTH ;
 int pskeyu64val (int *,int ,int ,int,int ) ;

__attribute__((used)) static void
poverall_bandwidth (GJSON * json, GLog * glog, int sp)
{
  pskeyu64val (json, OVERALL_BANDWIDTH, glog->resp_size, sp, 0);
}
